[gd_scene load_steps=2 format=3 uid="uid://cstory1"]

[ext_resource type="Script" path="res://ui/panels/story_panel.gd" id="1_script"]

[node name="StoryPanel" type="PanelContainer"]
custom_minimum_size = Vector2(280, 0)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Icon" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
text = "ðŸ“–"

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
text = "Story"

[node name="Separator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Content" type="RichTextLabel" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a step to view its story..."
scroll_following = true

[node name="RefsContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="RefsLabel" type="Label" parent="MarginContainer/VBox/RefsContainer"]
layout_mode = 2
text = "References:"

[node name="RefsList" type="ItemList" parent="MarginContainer/VBox/RefsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
